Additional dark mode fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,8 @@
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  /* --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255; */
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -42,7 +42,8 @@
 
 @media (prefers-color-scheme: dark) {
   .pageContent {
-    color: slategray;
+    color: whitesmoke;
+    background-color: rgb(44, 47, 51);
   }
   :root {
     --foreground-rgb: 255, 255, 255;
